# labjack

./: Cargo.toml  README.md  build.rs
.github/workflows/: format.yml  miri.yml  test.yml
examples/: connect.rs  discover.rs  test.rs
resources/: ljm_constants.json
src/: lib.rs
src/core/: data_types.rs  device.rs  dist.rs  func.rs  mod.rs
src/core/client/: client.rs  mod.rs  specific.rs
src/core/connection/: connect.rs  discover.rs  mod.rs
src/core/connection/methods/: tcp.rs
src/core/conversion/: adc.rs  dac.rs  daq.rs  mod.rs
src/core/ef/: loadcell.rs  mod.rs  thermocouple.rs
src/core/modbus/: binary.rs  client.rs  composite.rs  error.rs  function.rs  mod.rs  tcp.rs  transport.rs
src/core/modbus/transports/: emulated.rs  mod.rs  tcp.rs
src/core/sets/: connection_type.rs  device_type.rs  mod.rs
src/queue/: buffer.rs
src/test/: translate.rs
