[package]
name = "labjack"
version = "0.1.0"
edition = "2021"
description = "An opinionated Pure-Rust LabJack driver"
license = "MIT"
repository = "https://github.com/bennjii/labjack"
keywords = ["labjack", "pure", "ljm"]
include = ["/resources"]

[dependencies]
byteorder = "1.5.0"
either = "1.13.0"
enum_primitive = "0.1.1"
env_logger = "0.11.5"
log = "0.4.22"
num = "0.4.3"
serde = { version = "1.0.214", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
indexing_slicing = "allow"
